--- a/laravel/php85-laravel12-postgres/.env.example
+++ b/laravel/php85-laravel12-postgres/.env.example
@@ -1,54 +1,75 @@
+# Application
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+APP_VERSION=1.0.0
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-# PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
+# Logging
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# Database (PostgreSQL)
+DB_CONNECTION=pgsql
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=secret
 
+# JWT Authentication
+JWT_SECRET=change-this-in-production
+JWT_TTL=60
+JWT_REFRESH_TTL=20160
+
+# Session
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
+# Queue & Cache
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
+CACHE_STORE=array
 
-CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
+# Redis
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# OpenTelemetry
+OTEL_SERVICE_NAME=php-laravel12-postgres-otel
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+OTEL_TRACES_EXPORTER=otlp
+OTEL_METRICS_EXPORTER=otlp
+OTEL_LOGS_EXPORTER=otlp
+OTEL_PHP_AUTOLOAD_ENABLED=true
+OTEL_RESOURCE_ATTRIBUTES=deployment.environment=development
+
+# Base14 Scout (set via environment, not committed to repo)
+# SCOUT_ENDPOINT=https://your-tenant.base14.io:4318
+# SCOUT_CLIENT_ID=your_client_id
+# SCOUT_CLIENT_SECRET=your_client_secret
+# SCOUT_TOKEN_URL=https://your-tenant.base14.io/oauth/token
+
+# Mail
 MAIL_MAILER=log
-MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
@@ -56,10 +77,12 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# AWS (optional)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Vite
 VITE_APP_NAME="${APP_NAME}"
