--- a/nodejs/nestjs-postgres/.env.example
+++ b/nodejs/nestjs-postgres/.env.example
@@ -6,6 +6,9 @@ APP_VERSION=1.0.0
 # PostgreSQL Configuration
 DATABASE_URL=postgresql://postgres:postgres@postgres:5432/nestjs_app
 
+# Redis Configuration
+REDIS_URL=redis://redis:6379
+
 # Authentication (JWT)
 JWT_SECRET=your-secret-key-change-in-production
 JWT_EXPIRES_IN=7d
@@ -20,10 +23,11 @@ RATE_LIMIT_MAX=100
 # OpenTelemetry Configuration
 OTEL_SERVICE_NAME=nestjs-postgres-app
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
-OTEL_RESOURCE_ATTRIBUTES=deployment.environment=development,service.version=1.0.0
+OTEL_RESOURCE_ATTRIBUTES=service.version=1.0.0
 
 # base14 Scout Configuration (Required - set these via environment or .env.local)
 # SCOUT_ENDPOINT=https://your-tenant.base14.io:4318
 # SCOUT_CLIENT_ID=your_client_id
 # SCOUT_CLIENT_SECRET=your_client_secret
 # SCOUT_TOKEN_URL=https://your-tenant.base14.io/oauth/token
+# SCOUT_ENVIRONMENT=development
