--- a/nodejs/nestjs-postgres/compose.yml
+++ b/nodejs/nestjs-postgres/compose.yml
@@ -14,11 +14,14 @@ services:
       - APP_PORT=${APP_PORT:-3000}
       - APP_VERSION=${APP_VERSION:-1.0.0}
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/nestjs_app
+      - REDIS_URL=redis://redis:6379
       - OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME:-nestjs-postgres-app}
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT:-http://otel-collector:4318}
-      - OTEL_RESOURCE_ATTRIBUTES=${OTEL_RESOURCE_ATTRIBUTES:-deployment.environment=development,service.version=1.0.0}
+      - OTEL_RESOURCE_ATTRIBUTES=${OTEL_RESOURCE_ATTRIBUTES:-service.version=1.0.0}
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
       otel-collector:
         condition: service_started
@@ -35,7 +38,7 @@ services:
     image: postgres:16-alpine
     container_name: nestjs-postgres-db
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -44,6 +47,21 @@ services:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
+
+  redis:
+    image: redis:7-alpine
+    container_name: nestjs-postgres-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -65,11 +83,13 @@ services:
       - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID}
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL}
+      - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     networks:
       - app-network
 
 volumes:
   postgres-data:
+  redis-data:
 
 networks:
   app-network:
