--- a/go/go-fiber-postgres/compose.yml
+++ b/go/go-fiber-postgres/compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       PORT: "8080"
       ENVIRONMENT: development
-      DATABASE_URL: postgres://postgres:postgres@postgres:5432/gofiber?sslmode=disable
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/go_fiber_app?sslmode=disable
       JWT_SECRET: your-super-secret-jwt-key-change-in-production
       JWT_EXPIRES_IN: 168h
       OTEL_SERVICE_NAME: go-fiber-postgres-api
@@ -19,7 +19,7 @@ services:
       otel-collector:
         condition: service_started
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -30,7 +30,7 @@ services:
       dockerfile: Dockerfile.worker
     environment:
       ENVIRONMENT: development
-      DATABASE_URL: postgres://postgres:postgres@postgres:5432/gofiber?sslmode=disable
+      DATABASE_URL: postgres://postgres:postgres@postgres:5432/go_fiber_app?sslmode=disable
       OTEL_SERVICE_NAME: go-fiber-postgres-api
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318
     depends_on:
@@ -44,7 +44,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: gofiber
+      POSTGRES_DB: go_fiber_app
     ports:
       - "5432:5432"
     volumes:
