--- a/java/quarkus-postgres/src/main/resources/application.properties
+++ b/java/quarkus-postgres/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.http.port=8080
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${DB_USER:postgres}
 quarkus.datasource.password=${DB_PASSWORD:postgres}
-quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:quarkus}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:quarkus_app}
 
 # Hibernate
 quarkus.hibernate-orm.database.generation=update
