--- a/nodejs/express5-postgres/config/otel-config.yaml
+++ b/nodejs/express5-postgres/config/otel-config.yaml
@@ -28,6 +28,11 @@ processors:
   memory_limiter:
     limit_mib: 256
     check_interval: 1s
+  resource:
+    attributes:
+      - key: deployment.environment
+        value: ${env:SCOUT_ENVIRONMENT}
+        action: upsert
   batch:
     timeout: 10s
     send_batch_size: 1024
@@ -54,13 +59,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [otlphttp/b14, debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [otlphttp/b14, debug]
     logs:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
+      processors: [memory_limiter, resource, batch]
       exporters: [otlphttp/b14, debug]
