--- a/rust/axum-postgres/Cargo.toml
+++ b/rust/axum-postgres/Cargo.toml
@@ -38,8 +38,9 @@ sqlx = { version = "0.8.6", features = [
 
 # OpenTelemetry (latest stable)
 opentelemetry = "0.31.0"
-opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
-opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
+opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "logs"] }
+opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace", "logs"] }
+opentelemetry-appender-tracing = "0.31.0"
 
 # Tracing
 tracing = "0.1.44"
@@ -60,7 +61,6 @@ time = { version = "0.3", features = ["serde", "formatting", "macros"] }
 thiserror = "2.0.17"
 anyhow = "1.0.100"
 dotenvy = "0.15"
-once_cell = "1.20"
 
 [dev-dependencies]
 tokio-test = "0.4"
