--- a/nodejs/express5-postgres/package.json
+++ b/nodejs/express5-postgres/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express5-postgres",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Express 5 + PostgreSQL + OpenTelemetry Example",
   "type": "module",
   "engines": {
@@ -24,15 +24,15 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.54.0",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.57.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.57.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.57.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.3",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.208.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
     "@opentelemetry/instrumentation-socket.io": "^0.55.1",
-    "@opentelemetry/resources": "^1.30.0",
-    "@opentelemetry/sdk-logs": "^0.57.0",
-    "@opentelemetry/sdk-node": "^0.57.0",
-    "@opentelemetry/semantic-conventions": "^1.28.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-logs": "^0.208.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.34.8",
     "drizzle-orm": "^0.38.3",
@@ -58,6 +58,7 @@
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.17.0",
+    "globals": "^17.0.0",
     "socket.io-client": "^4.8.3",
     "tsx": "^4.21.0",
     "typescript": "^5.7.2",
