Align telemetry with OTel GenAI semconv, fix env vars, bump dependencies

--- a/python/ai-content-quality/.env.example
+++ b/python/ai-content-quality/.env.example
@@ -9,6 +9,7 @@
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-4.1-nano
 LLM_TEMPERATURE=0.3
+LLM_TIMEOUT=30.0
 
 # Provider API keys (only the active provider's key is required)
 OPENAI_API_KEY=your-openai-api-key
@@ -28,14 +29,17 @@ OPENAI_API_KEY=your-openai-api-key
 # =============================================================================
 
 # Service identification
-OTEL_SERVICE_NAME=ai-content-quality
+SERVICE_NAME=ai-content-quality
 SCOUT_ENVIRONMENT=development
 
 # Local OTel Collector endpoint (for docker compose setup)
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+OTLP_ENDPOINT=http://localhost:4318
 
 # Enable/disable telemetry (set to "true" to disable)
 OTEL_SDK_DISABLED=false
+
+# Capture prompt/completion content on spans (opt-in, disabled by default for PII safety)
+OTEL_INSTRUMENTATION_GENAI_CAPTURE_MESSAGE_CONTENT=false
 
 # Base14 Scout credentials (for OTel Collector → Scout export)
 # Get these from https://app.base14.io/settings/api-keys
@@ -52,6 +56,9 @@ SCOUT_ENDPOINT=https://collector.base14.io
 REVIEW_PROMPT_VERSION=v1
 IMPROVE_PROMPT_VERSION=v1
 SCORE_PROMPT_VERSION=v1
+
+# Request timeout (seconds) for LLM analysis endpoints
+REQUEST_TIMEOUT=60.0
 
 HOST=0.0.0.0
 PORT=8000
