--- a/python/ai-content-quality/compose.yml
+++ b/python/ai-content-quality/compose.yml
@@ -4,15 +4,21 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - OTEL_SERVICE_NAME=ai-content-quality
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
-      - OTEL_ENABLED=true
+      - SERVICE_NAME=${SERVICE_NAME:-ai-content-quality}
+      - OTLP_ENDPOINT=${OTLP_ENDPOINT:-http://otel-collector:4318}
+      - OTEL_SDK_DISABLED=${OTEL_SDK_DISABLED:-false}
+      - OTEL_INSTRUMENTATION_GENAI_CAPTURE_MESSAGE_CONTENT=${OTEL_INSTRUMENTATION_GENAI_CAPTURE_MESSAGE_CONTENT:-false}
       - LLM_PROVIDER=${LLM_PROVIDER:-openai}
       - LLM_MODEL=${LLM_MODEL:-gpt-4.1-nano}
       - LLM_TEMPERATURE=${LLM_TEMPERATURE:-0.3}
+      - LLM_TIMEOUT=${LLM_TIMEOUT:-30.0}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY:-}
+      - REQUEST_TIMEOUT=${REQUEST_TIMEOUT:-60.0}
+      - REVIEW_PROMPT_VERSION=${REVIEW_PROMPT_VERSION:-v1}
+      - IMPROVE_PROMPT_VERSION=${IMPROVE_PROMPT_VERSION:-v1}
+      - SCORE_PROMPT_VERSION=${SCORE_PROMPT_VERSION:-v1}
       - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     depends_on:
       otel-collector:
