--- a/rust/axum-postgres/Cargo.toml
+++ b/rust/axum-postgres/Cargo.toml
@@ -48,7 +48,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 tracing-opentelemetry = "0.32.0"
 
 # Authentication
-jsonwebtoken = "9.3"
+jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
 argon2 = "0.5.3"
 
 # Serialization
