--- a/nodejs/hono-postgres/compose.yml
+++ b/nodejs/hono-postgres/compose.yml
@@ -3,6 +3,22 @@
 
 services:
   # ==========================================================================
+  # Database Migration (runs once before app starts)
+  # ==========================================================================
+  db-migrate:
+    build:
+      context: .
+      target: runtime
+    command: ["node", "dist/db/migrate.js"]
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/hono_app
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  # ==========================================================================
   # Hono Application
   # ==========================================================================
   app:
@@ -23,8 +39,8 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318
       OTEL_RESOURCE_ATTRIBUTES: deployment.environment=${SCOUT_ENVIRONMENT:-development},service.namespace=examples
     depends_on:
-      postgres:
-        condition: service_healthy
+      db-migrate:
+        condition: service_completed_successfully
       redis:
         condition: service_healthy
       otel-collector:
@@ -55,8 +71,8 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318
       OTEL_RESOURCE_ATTRIBUTES: deployment.environment=${SCOUT_ENVIRONMENT:-development},service.namespace=examples
     depends_on:
-      postgres:
-        condition: service_healthy
+      db-migrate:
+        condition: service_completed_successfully
       redis:
         condition: service_healthy
       otel-collector:
