--- a/go/chi-inmemory/compose.yaml
+++ b/go/chi-inmemory/compose.yaml
@@ -35,7 +35,7 @@ services:
       - parking-network
 
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.115.1
+    image: otel/opentelemetry-collector-contrib:0.144.0
     container_name: otel-collector
     volumes:
       - ./config/otel-config.yaml:/etc/otelcol-contrib/config.yaml
@@ -43,11 +43,13 @@ services:
       - "4317:4317" # OTLP gRPC receiver
       - "4318:4318" # OTLP HTTP receiver
       - "55679:55679" # zpages extension
+      - "13133:13133" # health check
     environment:
       - SCOUT_ENDPOINT=${SCOUT_ENDPOINT}
       - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID}
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL}
+      - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     networks:
       - parking-network
 
