--- a/go/echo-postgres/config/otel-config.yaml
+++ b/go/echo-postgres/config/otel-config.yaml
@@ -28,12 +28,22 @@ processors:
   memory_limiter:
     limit_mib: 256
     check_interval: 1s
+  filter/noisy:
+    error_mode: ignore
+    traces:
+      span:
+        - 'IsMatch(name, ".*/health.*")'
   batch:
     timeout: 10s
     send_batch_size: 1024
+  resource:
+    attributes:
+      - key: deployment.environment
+        value: ${env:SCOUT_ENVIRONMENT}
+        action: upsert
 
 exporters:
-  otlphttp/b14:
+  otlp_http/b14:
     endpoint: ${env:SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -54,13 +64,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, filter/noisy, resource, batch]
+      exporters: [otlp_http/b14, debug]
     metrics:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, resource, batch]
+      exporters: [otlp_http/b14, debug]
     logs:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, resource, batch]
+      exporters: [otlp_http/b14, debug]
