--- a/go/fiber-postgres/config/otel-config.yaml
+++ b/go/fiber-postgres/config/otel-config.yaml
@@ -28,6 +28,11 @@ processors:
   memory_limiter:
     limit_mib: 256
     check_interval: 1s
+  filter/noisy:
+    error_mode: ignore
+    traces:
+      span:
+        - 'IsMatch(name, ".*/health.*")'
   batch:
     timeout: 10s
     send_batch_size: 1024
@@ -38,7 +43,7 @@ processors:
         action: upsert
 
 exporters:
-  otlphttp/b14:
+  otlp_http/b14:
     endpoint: ${env:SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -59,13 +64,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, resource, batch]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, filter/noisy, resource, batch]
+      exporters: [otlp_http/b14, debug]
     metrics:
       receivers: [otlp]
       processors: [memory_limiter, resource, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
     logs:
       receivers: [otlp]
       processors: [memory_limiter, resource, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
