--- a/python/fastapi-celery-postgres/config/otel-config.yaml
+++ b/python/fastapi-celery-postgres/config/otel-config.yaml
@@ -50,20 +50,25 @@ processors:
   batch:
     timeout: 10s
     send_batch_size: 1024
+  filter/noisy:
+    error_mode: ignore
+    traces:
+      span:
+        - 'IsMatch(name, ".*/health.*")'
   resource:
     attributes:
     - key: service.name
       value: 'fastapi-celery-postgres'
       action: upsert
     - key: deployment.environment
-      value: 'demo'
+      value: ${env:SCOUT_ENVIRONMENT}
       action: upsert
     - key: service.namespace
       value: 'base14-examples'
       action: upsert
 
 exporters:
-  otlphttp/b14:
+  otlp_http/b14:
     endpoint: ${env:SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -84,13 +89,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, batch, resource]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, filter/noisy, resource, batch]
+      exporters: [otlp_http/b14, debug]
     metrics:
       receivers: [otlp, postgresql/all, rabbitmq, redis]
       processors: [memory_limiter, batch, resource]
-      exporters: [otlphttp/b14]
+      exporters: [otlp_http/b14]
     logs:
       receivers: [otlp]
       processors: [memory_limiter, batch, resource]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
