--- a/loadgen/requirements.txt
+++ b/loadgen/requirements.txt
@@ -2,5 +2,5 @@ aiohttp==3.13.3
 opentelemetry-api==1.38.0
 opentelemetry-sdk==1.38.0
 opentelemetry-exporter-otlp==1.38.0
-opentelemetry-instrumentation-aiohttp-client==0.59b0
-opentelemetry-instrumentation-logging==0.59b0
+opentelemetry-instrumentation-aiohttp-client>=0.60b1
+opentelemetry-instrumentation-logging>=0.60b1
