--- a/python/ai-content-quality/otel-collector-config.yaml
+++ b/python/ai-content-quality/otel-collector-config.yaml
@@ -34,6 +34,13 @@ processors:
     limit_mib: 512
     spike_limit_mib: 128
 
+  # Filter noisy health check spans
+  filter/noisy:
+    error_mode: ignore
+    traces:
+      span:
+        - 'IsMatch(name, ".*/health.*")'
+
   # Batch for efficiency
   batch:
     timeout: 10s
@@ -49,7 +56,7 @@ processors:
 
 exporters:
   # Base14 Scout exporter with retry and compression
-  otlphttp/b14:
+  otlp_http/b14:
     endpoint: ${SCOUT_ENDPOINT}
     auth:
       authenticator: oauth2client
@@ -72,13 +79,13 @@ service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, attributes, batch]
-      exporters: [otlphttp/b14, debug]
+      processors: [memory_limiter, filter/noisy, attributes, batch]
+      exporters: [otlp_http/b14, debug]
     metrics:
       receivers: [otlp]
       processors: [memory_limiter, attributes, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
     logs:
       receivers: [otlp]
       processors: [memory_limiter, attributes, batch]
-      exporters: [otlphttp/b14, debug]
+      exporters: [otlp_http/b14, debug]
