--- a/python/django-postgres/compose.yml
+++ b/python/django-postgres/compose.yml
@@ -83,7 +83,7 @@ services:
       - app-network
 
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.116.1
+    image: otel/opentelemetry-collector-contrib:0.144.0
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
       - ./config/otel-config.yaml:/etc/otel-collector-config.yaml:ro
@@ -92,11 +92,15 @@ services:
       - "4318:4318"
       - "13133:13133"
       - "55679:55679"
+    env_file:
+      - path: .env
+        required: false
     environment:
-      - SCOUT_ENDPOINT=${SCOUT_ENDPOINT:-}
+      - SCOUT_ENDPOINT=${SCOUT_ENDPOINT:-http://localhost:4318}
       - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID:-}
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET:-}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL:-}
+      - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     networks:
       - app-network
 
