--- a/python/fastapi-postgres/requirements.txt
+++ b/python/fastapi-postgres/requirements.txt
@@ -1,5 +1,4 @@
-fastapi[all]==0.128.0
-starlette==0.51.0
+fastapi[all]==0.129.0
 pydantic==2.12.5
 psycopg2-binary==2.9.10
 SQLAlchemy==2.0.45
@@ -10,10 +9,10 @@ PyJWT==2.10.1
 python-multipart==0.0.22
 alembic==1.14.0
 pydantic_settings==2.12.0
-opentelemetry-instrumentation-fastapi==0.60b0
-opentelemetry-instrumentation-sqlalchemy==0.60b0
+opentelemetry-instrumentation-fastapi>=0.60b1
+opentelemetry-instrumentation-sqlalchemy>=0.60b1
 opentelemetry-sdk==1.39.1
-opentelemetry-instrumentation-requests==0.60b0
+opentelemetry-instrumentation-requests>=0.60b1
 requests==2.32.4
 opentelemetry-exporter-otlp==1.39.1
 opentelemetry-api==1.39.1
