--- a/python/flask-postgres/compose.yml
+++ b/python/flask-postgres/compose.yml
@@ -105,7 +105,7 @@ services:
   # OpenTelemetry Collector
   # ==========================================================================
   otel-collector:
-    image: otel/opentelemetry-collector-contrib:0.116.1
+    image: otel/opentelemetry-collector-contrib:0.144.0
     command: ["--config=/etc/otelcol-config.yaml"]
     volumes:
       - ./config/otel-config.yaml:/etc/otelcol-config.yaml:ro
@@ -113,11 +113,15 @@ services:
       - "4317:4317"   # OTLP gRPC
       - "4318:4318"   # OTLP HTTP
       - "13133:13133" # Health check
+    env_file:
+      - path: .env
+        required: false
     environment:
       - SCOUT_ENDPOINT=${SCOUT_ENDPOINT:-http://localhost:4318}
       - SCOUT_CLIENT_ID=${SCOUT_CLIENT_ID:-}
       - SCOUT_CLIENT_SECRET=${SCOUT_CLIENT_SECRET:-}
       - SCOUT_TOKEN_URL=${SCOUT_TOKEN_URL:-}
+      - SCOUT_ENVIRONMENT=${SCOUT_ENVIRONMENT:-development}
     networks:
       - app-network
 
