--- a/python/flask-postgres/pyproject.toml
+++ b/python/flask-postgres/pyproject.toml
@@ -33,11 +33,11 @@ dependencies = [
     "gunicorn>=23.0",
     "opentelemetry-sdk>=1.39",
     "opentelemetry-exporter-otlp>=1.39",
-    "opentelemetry-instrumentation-flask>=0.60b",
-    "opentelemetry-instrumentation-sqlalchemy>=0.60b",
-    "opentelemetry-instrumentation-celery>=0.60b",
-    "opentelemetry-instrumentation-redis>=0.60b",
-    "opentelemetry-instrumentation-logging>=0.60b",
+    "opentelemetry-instrumentation-flask>=0.60b1",
+    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
+    "opentelemetry-instrumentation-celery>=0.60b1",
+    "opentelemetry-instrumentation-redis>=0.60b1",
+    "opentelemetry-instrumentation-logging>=0.60b1",
 ]
 
 [project.optional-dependencies]
